[package]
name = "chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "client"

[[bin]]
name = "server"

[dependencies]
argh = "0.1.12"
color-eyre = "0.6.2"
dashmap = "5.5.3"
futures = "0.3.28"
rusqlite = { version = "0.29.0", features = ["hooks"] }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.33.0", features = ["full"] }
tracing = "0.1.39"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
